improvements, java25